--- a/features/app/src/main/AndroidManifest.xml
+++ b/features/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MvcApp"
+        android:process="com.project.mvcapp"
         >
 
         <activity
