Adding toml files, using gradle version catalog

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,11 @@
 rootProject.name = "MvcApp"
 include ':apis:service'
 include ':features:app'
+
+dependencyResolutionManagement {
+    versionCatalogs {
+        testLibs {
+            from(files("/gradle/testlibs.versions.toml"))
+        }
+    }
+}
