--- a/apis/service/build.gradle
+++ b/apis/service/build.gradle
@@ -30,17 +30,16 @@ android {
 }
 
 dependencies {
+    implementation libs.rxJava
+    implementation libs.coreKtx
+    implementation libs.okhttp
+    implementation libs.rxAndroid
+    implementation libs.retrofitCore
+    implementation libs.converterGson
+    implementation libs.adapterRxJava2
+    implementation libs.loggingInterceptor
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
-
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation testLibs.junit
+    androidTestImplementation testLibs.extJunit
+    androidTestImplementation testLibs.espresso
 }
