--- a/features/app/build.gradle
+++ b/features/app/build.gradle
@@ -32,24 +32,23 @@ android {
 }
 
 dependencies {
-
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation project(path: ':apis:service')
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'org.mockito:mockito-android:2.19.0'
-    testImplementation 'androidx.arch.core:core-testing:2.1.0'
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation libs.glide
+    implementation libs.rxJava
+    implementation libs.timber
+    implementation libs.coreKtx
+    implementation libs.material
+    implementation libs.appCompat
+    implementation libs.rxAndroid
+    implementation libs.constraintLayout
+
+    testImplementation testLibs.junit
+    testImplementation testLibs.coreTesting
+    testImplementation testLibs.mockitoKotlin
+
+    androidTestImplementation testLibs.extJunit
+    androidTestImplementation testLibs.espresso
+    androidTestImplementation testLibs.mockitoAndroid
 }
